kubernetes/apps/system-upgrade/networkpolicies/default-deny.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Default deny all ingress to pods in this namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: system-upgrade
spec:
  endpointSelector: {}
  ingress: []
---
# Default deny all egress from pods in this namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-egress
  namespace: system-upgrade
spec:
  endpointSelector: {}
  egress: []
